--- a/_posts/2023-07-04-sgs.markdown
+++ b/_posts/2023-07-04-sgs.markdown
@@ -107,7 +107,7 @@ $$ p_{X}(n) = {\binom{n-1}{k}}p^{r}(1-p)^{k}, \quad n = k+r \enspace \text{and} 
 
 数学期望（Expected value）和方差（Variance）分别为：
 
-$$ \operatorname{E}(X) = \frac{r}{p} = 4, \quad \operatorname{Var}(X) = \frac{r(1-p)}{p^{2}} = \frac{4}{3} $$
+$$ \mathbb E[X] = \frac{r}{p} = 4, \quad \operatorname{Var}(X) = \frac{r(1-p)}{p^{2}} = \frac{4}{3} $$
 
 这说明在理想情况下，发动觉醒技**凿险**时所需的**屯田**次数平均为4次。
 
@@ -123,17 +123,17 @@ $$ p_{X}(k)=\frac{\binom{K+r-1}{k}\binom{N-r-K}{K-k}}{\binom{N}{K}}, \quad k=0,1
 
 数学期望和方差分别为：
 
-$$ \operatorname{E}(X) = \frac{rK}{N-K+1}+r = \frac{rN+r}{N-K+1} = \frac{3N+3}{N-K+1} $$
+$$ \mathbb E[X] = \frac{rK}{N-K+1}+r = \frac{rN+r}{N-K+1} = \frac{3N+3}{N-K+1} $$
 
 $$ \operatorname{Var}(X) = \frac{rK(N+1)(N-K-r+1)}{(N-K+1)^{2}(N-K+2)} = \frac{3K(N+1)(N-K-2)}{(N-K+1)^{2}(N-K+2)} $$
 
 如果我们假定$$ K = N/4 $$，那么：
 
-$$ \operatorname{E}(X) = 4-\frac{4}{3N+4} \lt 4 $$
+$$ \mathbb E[X] = 4-\frac{4}{3N+4} \lt 4 $$
 
 $$ \operatorname{Var}(X) = \frac{12N(N+1)(3N-8)}{(3N+4)^{2}(3N+8)} $$
 
-可见，$$ \operatorname{E}(X) $$与$$ N $$正相关，且小于理想模型下**屯田**次数的数学期望。
+可见，$$ \mathbb E[X] $$与$$ N $$正相关，且小于理想模型下**屯田**次数的数学期望。
 
 #### 甄姬（标准版）
 
@@ -163,7 +163,7 @@ $$ p_{Y}(k) = (1-p)^{k}p, \quad k \in \mathbb{N}_0 $$
 
 数学期望和方差分别为：
 
-$$ \operatorname{E}(Y) = {\frac{1-p}{p}} = 1,\qquad \operatorname{Var}(Y)={\frac {1-p}{p^{2}}} = 2 $$
+$$ \mathbb E[Y] = {\frac{1-p}{p}} = 1,\qquad \operatorname{Var}(Y)={\frac {1-p}{p^{2}}} = 2 $$
 
 这说明在理想情况下，**洛神**所得的牌数平均为1张。
 
@@ -183,7 +183,7 @@ $$ p_{Y}(k \ge 8) = 1 - \sum_{k = 0}^7{p_Y(k)} = \frac{1}{256} \approxeq 0.00390
 
 数学期望和方差分别为：
 
-$$ \operatorname{E}(X) = \frac{rK}{N-K+1} = \frac{rN+r}{N-K+1} = \frac{K}{N-K+1} $$
+$$ \mathbb E[X] = \frac{rK}{N-K+1} = \frac{rN+r}{N-K+1} = \frac{K}{N-K+1} $$
 
 $$ \operatorname{Var}(X) = \frac{rK(N+1)(N-K-r+1)}{(N-K+1)^{2}(N-K+2)} = \frac{K(N+1)(N-K)}{(N-K+1)^{2}(N-K+2)} $$
 
@@ -191,11 +191,11 @@ $$ \operatorname{Var}(X) = \frac{rK(N+1)(N-K-r+1)}{(N-K+1)^{2}(N-K+2)} = \frac{K
 
 如果我们假定$$ K = N/2 $$，那么：
 
-$$ \operatorname{E}(X) = \frac{1}{1+\frac{2}{N}} \lt 1 $$
+$$ \mathbb E[X] = \frac{1}{1+\frac{2}{N}} \lt 1 $$
 
 $$ \operatorname{Var}(X) = \frac{N^2(N+1)}{(N+2)(N+4)} $$
 
-可见，$$ \operatorname{E}(X) $$与$$ N $$正相关，且小于理想模型下**洛神**牌的数学期望。
+可见，$$ \mathbb E[X] $$与$$ N $$正相关，且小于理想模型下**洛神**牌的数学期望。
 
 前文对军争篇模型的介绍中已经提到，我们假设某一时刻，牌堆平均有143张牌。那么：
 
@@ -229,11 +229,11 @@ $$ p_{H}(k) = {\binom{n}{k}}p^{k}(1-p)^{n-k}, \quad k \in \mathbb{N} \enspace \t
 
 数学期望和方差分别为：
 
-$$ \operatorname{E}(H) = \frac{X}{4}, \quad \operatorname{Var}(H) = np(1-p) = \frac{3X}{16} $$
+$$ \mathbb E[H] = \frac{X}{4}, \quad \operatorname{Var}(H) = np(1-p) = \frac{3X}{16} $$
 
 同理，定义所获得手牌为$$ C $$，则$$ C \sim \operatorname{B}(X,3/4) $$。
 
-$$ \operatorname{E}(C) = \frac{3X}{4}, \quad \operatorname{Var}(C) = np(1-p) = \frac{3X}{16} $$
+$$ \mathbb E[C] = \frac{3X}{4}, \quad \operatorname{Var}(C) = np(1-p) = \frac{3X}{16} $$
 
 这里我们继续讨论一个问题：$$ X=? $$时发动**再起**收益最高？
 
@@ -241,13 +241,13 @@ $$ \operatorname{E}(C) = \frac{3X}{4}, \quad \operatorname{Var}(C) = np(1-p) = \
 
 $$ P = C + HR $$
 
-$$ \operatorname{E}(P) = \operatorname{E}(C)+R\operatorname{E}(H) = \frac{X}{4}(3+R) $$
+$$ \mathbb E[P] = \mathbb E[C]+R\mathbb E[H] = \frac{X}{4}(3+R) $$
 
 一般认为，$$ R \approxeq 2 $$，即“一血=两牌”理论（郭嘉**遗计**、黄盖**苦肉**、钟会**排异**等都是佐证）。该理论经大量游戏实践验证而一度在玩家中非常流行。当然，不少玩家对此理论也持不同观点，因此我们要讨论在**再起**技能的情况下，$$ R $$值的合理范围。
 
 如果不发动**再起**，摸牌阶段会获得$$ 2 $$张牌。若要使发动**再起**的收益优于不发动，那么：
 
-$$ \operatorname{E}(P) \gt 2 $$
+$$ \mathbb E[P] \gt 2 $$
 
 $$ X = \lceil \frac{8}{3+R} \rceil $$
 
@@ -269,7 +269,7 @@ $$ p_{H}(k)=\frac{\binom{K}{k}\binom{N-K}{n-k}}{\binom{N}{n}}, \quad k \in \math
 
 数学期望和方差分别为：
 
-$$ \operatorname{E}(H) = np = Xp $$
+$$ \mathbb E[H] = np = Xp $$
 
 $$ \operatorname{Var}(H) = \frac{np(1-p)(N-n)}{N-1} = \frac{Xp(1-p)(N-X)}{N-1} $$
 
@@ -277,7 +277,7 @@ $$ \operatorname{Var}(H) = \frac{np(1-p)(N-n)}{N-1} = \frac{Xp(1-p)(N-X)}{N-1} $
 
 如果我们假定$$ K = N/4 $$，则$$ p=1/4 $$，那么：
 
-$$ \operatorname{E}(H) = \frac{X}{4} $$
+$$ \mathbb E[H] = \frac{X}{4} $$
 
 $$ \operatorname{Var}(H) = \frac{3X}{16}\frac{N-X}{N-1} \lt \frac{3X}{16} $$
 
@@ -311,7 +311,7 @@ $$ X \sim NB(r,p) $$
 
 数学期望和方差分别为：
 
-$$ \operatorname{E}(X) = \frac{r}{p} = \frac{160}{117}r \approxeq 1.3675r, \quad \operatorname{Var}(X) = \frac{r(1-p)}{p^{2}} = \frac{6880}{13689}r \approxeq 0.5026r $$
+$$ \mathbb E[X] = \frac{r}{p} = \frac{160}{117}r \approxeq 1.3675r, \quad \operatorname{Var}(X) = \frac{r(1-p)}{p^{2}} = \frac{6880}{13689}r \approxeq 0.5026r $$
 
 ### 二次函数
 
@@ -347,7 +347,7 @@ $$ p(x) = \frac{1}{169}\sum_{i=1}^{13}C_{i,x} = \frac{1}{169}\sum_{i = 1}^{x-1}(
 
 可见，随着“饶舌”标记的增多，拼点赢的概率连续增大。
 
-接下来研究“饶舌”标记数量为$$ x $$时，发动**鼓舌**而获得“饶舌”标记数量$$ K $$。假设发动**鼓舌**时与$$ n $$名角色同时拼点，其中$$ 0 \lt n \le 3 $$。很明显，其概率符合二项分布$$ K \sim \operatorname{B}(n,1-p(x)) $$，数学期望$$ \operatorname{E}(K;x) = n(1-p(x)) = \frac{n}{169}(91-x^2+x) $$。
+接下来研究“饶舌”标记数量为$$ x $$时，发动**鼓舌**而获得“饶舌”标记数量$$ K $$。假设发动**鼓舌**时与$$ n $$名角色同时拼点，其中$$ 0 \lt n \le 3 $$。很明显，其概率符合二项分布$$ K \sim \operatorname{B}(n,1-p(x)) $$，数学期望$$ \mathbb E[K;x] = n(1-p(x)) = \frac{n}{169}(91-x^2+x) $$。
 
 其期望散点图如下：
 
@@ -427,11 +427,11 @@ $$ p_{X}(k) = \frac{m!(k-1)}{m^{k}(m-k+1)!}, \quad k \in \mathbb{Z} \enspace \te
 
 数学期望为：
 
-$$ \operatorname{E}(X) = 1 + \sum_{k=1}^{m}{\frac{m!}{(m-k)!m^{k}}} \approxeq 5.2124 $$
+$$ \mathbb E[X] = 1 + \sum_{k=1}^{m}{\frac{m!}{(m-k)!m^{k}}} \approxeq 5.2124 $$
 
 我们也可以将右式进行拉马努金渐近展开，从而得到简化的近似表达式：
 
-$$ \operatorname{E}(X) \sim \sqrt{\frac{\pi m}{2}}+\frac {2}{3} \approxeq 5.1856 $$
+$$ \mathbb E[X] \sim \sqrt{\frac{\pi m}{2}}+\frac {2}{3} \approxeq 5.1856 $$
 
 由此我们可知，周泰的“创”数平均约为5.2张。
 
@@ -443,7 +443,7 @@ $$ p_{X}(k \ge 9) = 1 - \sum_{k = 2}^8{p_X(k)} \approxeq 0.06361 $$
 
 若考虑【2】与【Q】的概率较于其他点数略高，我们可以对PMF做细微修正，得到更加准确的数学期望：
 
-$$ \operatorname{E}(X) \approxeq 5.2065 $$
+$$ \mathbb E[X] \approxeq 5.2065 $$
 
 可见，此结果的差异完全可以忽略。
 
@@ -467,7 +467,7 @@ $$ p_{X}(k) = \frac{m^{\underline k}}{m^{n}}\begin{Bmatrix}n\\k\end{Bmatrix} $$
 
 该问题是生日问题的[一种形式](https://en.wikipedia.org/wiki/Birthday_problem#Number_of_people_with_a_shared_birthday)。数学期望和方差分别为：
 
-$$ \operatorname{E}(X) = m(1-(1-\frac{1}{m})^n) = \frac{781}{256} \approxeq 3.0508 $$
+$$ \mathbb E[X] = m(1-(1-\frac{1}{m})^n) = \frac{781}{256} \approxeq 3.0508 $$
 
 $$ \operatorname{Var}(X) = m(m-1)(1-\frac{2}{m})^{n}+m(1-\frac{1}{m})^{n}-m^2(1-\frac{1}{m})^{2n} = \frac{27735}{65536} \approxeq 0.4232 $$
 
@@ -497,9 +497,7 @@ $$p_{X}(n) = 1-\prod_{k=1}^{n-1}\left(1-{\frac{\min(k, m)}{m}}\right)$$
 
 求 $$ m $$ 种花色的 $$ n $$ 张手牌中,最大配对数的期望。
 
-设 $$ m \ge 2 $$，$$ n \in \mathbb{N} $$。
-
-令
+设 $$ m \ge 2 $$，$$ n \in \mathbb{N} $$。令
 
 $$
 X_1, X_2, \dots, X_n
@@ -508,59 +506,59 @@ $$
 为相互独立同分布的随机变量，且
 
 $$
-\mathbb{P}(X_i = j) = \frac{1}{m}, \quad j = 1,2,\dots,m.
+\mathbb{P}(X_i = j) = \frac{1}{m}, \quad j = 1,2,\dots,m
 $$
 
 对每一个取值 $$ j $$，定义出现次数
 
 $$
-N_j := \#\{ i \in \{1,\dots,n\} : X_i = j \}.
+N_j := \#\{ i \in \{1,\dots,n\} : X_i = j \}
 $$
 
 若两个元素取值相同，则可构成一对；每个元素最多只能使用一次。因此，对取值 $$ j $$ 最多能形成的配对数为
 
 $$
-\left\lfloor \frac{N_j}{2} \right\rfloor.
+\left\lfloor \frac{N_j}{2} \right\rfloor
 $$
 
 整个样本中能形成的最大配对数为
 
 $$
 P_{\max}
-:= \sum_{j=1}^{m} \left\lfloor \frac{N_j}{2} \right\rfloor.
+:= \sum_{j=1}^{m} \left\lfloor \frac{N_j}{2} \right\rfloor
 $$
 
 目标是计算最大配对数的期望
 
 $$
-\mathbb{E}[P_{\max}].
+\mathbb{E}[P_{\max}]
 $$
 
 虽然随机变量 $$ N_1,\dots,N_m $$ 彼此相关，但期望具有线性性，因此
 
 $$
 \mathbb{E}[P_{\max}]
-= \sum_{j=1}^{m} \mathbb{E}\!\left[\left\lfloor \frac{N_j}{2} \right\rfloor\right].
+= \sum_{j=1}^{m} \mathbb{E}\!\left[\left\lfloor \frac{N_j}{2} \right\rfloor\right]
 $$
 
 由于对称性，
 
 $$
 \mathbb{E}[P_{\max}]
-= m \, \mathbb{E}\!\left[\left\lfloor \frac{N_1}{2} \right\rfloor\right].
+= m \, \mathbb{E}\!\left[\left\lfloor \frac{N_1}{2} \right\rfloor\right]
 $$
 
 注意到
 
 $$
-N_1 \sim \mathrm{Bin}\!\left(n,\frac{1}{m}\right).
+N_1 \sim \mathrm{Bin}\!\left(n,\frac{1}{m}\right)
 $$
 
 对任意整数 $$ k $$，有恒等式
 
 $$
 \left\lfloor \frac{k}{2} \right\rfloor
-= \frac{k}{2} - \frac{1}{2}\mathbf{1}_{\{k \text{ 为奇数}\}}.
+= \frac{k}{2} - \frac{1}{2}\mathbf{1}_{\{k \text{ 为奇数}\}}
 $$
 
 因此
@@ -569,27 +567,27 @@ $$
 \mathbb{E}\!\left[\left\lfloor \frac{B}{2} \right\rfloor\right]
 = \frac{\mathbb{E}[B]}{2}
 - \frac{1}{2}\mathbb{P}(B \text{ 为奇数}),
-\quad B \sim \mathrm{Bin}\!\left(n,\frac{1}{m}\right).
+\quad B \sim \mathrm{Bin}\!\left(n,\frac{1}{m}\right)
 $$
 
 对于 $$ B \sim \mathrm{Bin}(n,p) $$，有
 
 $$
 \mathbb{P}(B \text{ 为奇数})
-= \frac{1 - (1 - 2p)^n}{2}.
+= \frac{1 - (1 - 2p)^n}{2}
 $$
 
 在此问题中 $$ p = \frac{1}{m} $$，因此
 
 $$
 \mathbb{P}(B \text{ 为奇数})
-= \frac{1 - \left(1 - \frac{2}{m}\right)^n}{2}.
+= \frac{1 - \left(1 - \frac{2}{m}\right)^n}{2}
 $$
 
 由于
 
 $$
-\mathbb{E}[B] = \frac{n}{m},
+\mathbb{E}[B] = \frac{n}{m}
 $$
 
 可得
@@ -598,7 +596,7 @@ $$
 \mathbb{E}\!\left[\left\lfloor \frac{B}{2} \right\rfloor\right]
 = \frac{n}{2m}
 - \frac{1}{4}
-+ \frac{1}{4}\left(1 - \frac{2}{m}\right)^n.
++ \frac{1}{4}\left(1 - \frac{2}{m}\right)^n
 $$
 
 最终得到最大配对数的期望：
@@ -631,7 +629,7 @@ $$
 对任意整数 $$ u\ge 0 $$，有恒等式
 
 $$
-\left\lfloor\frac u2\right\rfloor=\frac u2-\frac12\mathbf 1_{\{u\text{ 为奇数}\}}.
+\left\lfloor\frac u2\right\rfloor=\frac u2-\frac12\mathbf 1_{\{u\text{ 为奇数}\}}
 $$
 
 因此
@@ -640,18 +638,18 @@ $$
 P_{\max}
 =\sum_{j=1}^m\left(\frac{N_j}{2}-\frac12\mathbf 1_{\{N_j\text{ 奇}\}}\right)
 =\frac12\sum_{j=1}^m N_j-\frac12\sum_{j=1}^m \mathbf 1_{\{N_j\text{ 奇}\}}
-=\frac n2-\frac12\,O,
+=\frac n2-\frac12\,O
 $$
 
 其中
 $$
-O:=\sum_{j=1}^m I_j,\qquad I_j:=\mathbf 1_{\{N_j\text{ 为奇数}\}}.
+O:=\sum_{j=1}^m I_j,\qquad I_j:=\mathbf 1_{\{N_j\text{ 为奇数}\}}
 $$
 
 于是
 
 $$
-\operatorname{Var}(P_{\max})=\frac14\,\operatorname{Var}(O).
+\operatorname{Var}(P_{\max})=\frac14\,\operatorname{Var}(O)
 $$
 
 因此关键变成：计算 $$ O=\sum_{j=1}^m I_j $$ 的方差。
@@ -659,26 +657,26 @@ $$
 注意到对任意整数随机变量 $$ Y $$，有
 
 $$
-\mathbf 1_{\{Y\text{ 奇}\}}=\frac{1-(-1)^Y}{2}.
+\mathbf 1_{\{Y\text{ 奇}\}}=\frac{1-(-1)^Y}{2}
 $$
 
 所以
 
 $$
 \mathbb E[I_1]=\mathbb P(N_1\text{ 奇})
-=\frac{1-\mathbb E[(-1)^{N_1}]}{2}.
+=\frac{1-\mathbb E[(-1)^{N_1}]}{2}
 $$
 
 而 $$ N_1\sim\mathrm{Bin}(n,\tfrac1m) $$。利用二项分布的概率生成函数（[Generating function](https://en.wikipedia.org/wiki/Generating_function)）（或直接二项式展开）：
 
 $$
-\mathbb E[t^{N_1}]=(1-p+pt)^n,\quad p=\frac1m.
+\mathbb E[t^{N_1}]=(1-p+pt)^n,\quad p=\frac1m
 $$
 
 取 $$ t=-1 $$ 得到
 
 $$
-\mathbb E[(-1)^{N_1}]=(1-p-p)^n=(1-2p)^n=\left(1-\frac{2}{m}\right)^n.
+\mathbb E[(-1)^{N_1}]=(1-p-p)^n=(1-2p)^n=\left(1-\frac{2}{m}\right)^n
 $$
 
 定义
@@ -687,7 +685,7 @@ a:=\left(1-\frac{2}{m}\right)^n
 $$，于是
 
 $$
-\mathbb E[I_1]=\frac{1-a}{2}.
+\mathbb E[I_1]=\frac{1-a}{2}
 $$
 
 因为 $$ I_1 $$ 是 $$ 0/1 $$ 变量，
@@ -695,7 +693,7 @@ $$
 $$
 \operatorname{Var}(I_1)=\mathbb E[I_1](1-\mathbb E[I_1])
 =\frac{1-a}{2}\cdot\frac{1+a}{2}
-=\frac{1-a^2}{4}.
+=\frac{1-a^2}{4}
 $$
 
 计算协方差 $$ \operatorname{Cov}(I_1,I_2) $$，需要 $$ \mathbb E[I_1I_2] $$：
@@ -703,20 +701,20 @@ $$
 $$
 I_j=\frac{1-(-1)^{N_j}}{2}
 \quad\Longrightarrow\quad
-I_1I_2=\frac{1-(-1)^{N_1}-(-1)^{N_2}+(-1)^{N_1+N_2}}{4}.
+I_1I_2=\frac{1-(-1)^{N_1}-(-1)^{N_2}+(-1)^{N_1+N_2}}{4}
 $$
 
 取期望：
 
 $$
 \mathbb E[I_1I_2]
-=\frac{1-\mathbb E[(-1)^{N_1}]-\mathbb E[(-1)^{N_2}]+\mathbb E[(-1)^{N_1+N_2}}{4}.
+=\frac{1-\mathbb E[(-1)^{N_1}]-\mathbb E[(-1)^{N_2}]+\mathbb E[(-1)^{N_1+N_2}}{4}
 $$
 
 由对称性 $$ \mathbb E[(-1)^{N_1}]=\mathbb E[(-1)^{N_2}]=a $$，所以
 
 $$
-\mathbb E[I_1I_2]=\frac{1-2a+\mathbb E[(-1)^{N_1+N_2}]}{4}.
+\mathbb E[I_1I_2]=\frac{1-2a+\mathbb E[(-1)^{N_1+N_2}]}{4}
 $$
 
 现在计算 $$ \mathbb E[(-1)^{N_1+N_2}] $$。令
@@ -727,13 +725,13 @@ $$
 由于每次抽牌落在 $$ \{1,2\} $$ 的概率是 $$ \frac{2}{m} $$，因此
 
 $$
-S\sim\mathrm{Bin}\!\left(n,\frac{2}{m}\right).
+S\sim\mathrm{Bin}\!\left(n,\frac{2}{m}\right)
 $$
 
 并且
 
 $$
-(-1)^{N_1+N_2}=(-1)^S.
+(-1)^{N_1+N_2}=(-1)^S
 $$
 
 于是
@@ -741,7 +739,7 @@ $$
 $$
 \mathbb E[(-1)^{N_1+N_2}]
 =\mathbb E[(-1)^S]
-=\left(1-\frac{4}{m}\right)^n.
+=\left(1-\frac{4}{m}\right)^n
 $$
 
 定义
@@ -751,7 +749,7 @@ $$
 ，代回得到
 
 $$
-\mathbb E[I_1I_2]=\frac{1-2a+b}{4}.
+\mathbb E[I_1I_2]=\frac{1-2a+b}{4}
 $$
 
 于是
@@ -760,14 +758,14 @@ $$
 \operatorname{Cov}(I_1,I_2)
 =\mathbb E[I_1I_2]-\mathbb E[I_1]^2
 =\frac{1-2a+b}{4}-\left(\frac{1-a}{2}\right)^2
-=\frac{b-a^2}{4}.
+=\frac{b-a^2}{4}
 $$
 
 因为 $$ O=\sum_{j=1}^m I_j $$，且各 $$ I_j $$ 交换对称，所以
 
 $$
 \operatorname{Var}(O)
-= m\,\operatorname{Var}(I_1)+m(m-1)\,\operatorname{Cov}(I_1,I_2).
+= m\,\operatorname{Var}(I_1)+m(m-1)\,\operatorname{Cov}(I_1,I_2)
 $$
 
 代入上面的结果：
@@ -775,7 +773,7 @@ $$
 $$
 \operatorname{Var}(O)
 = m\cdot\frac{1-a^2}{4}+m(m-1)\cdot\frac{b-a^2}{4}
-=\frac{m}{4}(1-a^2)+\frac{m(m-1)}{4}(b-a^2).
+=\frac{m}{4}(1-a^2)+\frac{m(m-1)}{4}(b-a^2)
 $$
 
 因此
@@ -784,7 +782,7 @@ $$
 \boxed{
 \operatorname{Var}(P_{\max})
 =\frac14\,\operatorname{Var}(O)
-= \frac{m}{16}(1-a^2)+\frac{m(m-1)}{16}(b-a^2),
+= \frac{m}{16}(1-a^2)+\frac{m(m-1)}{16}(b-a^2)
 }
 $$
 
@@ -792,13 +790,13 @@ $$
 
 $$
 a=\left(1-\frac{2}{m}\right)^n,\qquad
-b=\left(1-\frac{4}{m}\right)^n.
+b=\left(1-\frac{4}{m}\right)^n
 $$
 
 当 $$ m=4 $$ 时
 
 $$
-a=\left(\frac12\right)^n,\qquad b=(1-1)^n=0\quad(n\ge 1).
+a=\left(\frac12\right)^n,\qquad b=(1-1)^n=0\quad(n\ge 1)
 $$
 
 代入得到
@@ -806,10 +804,10 @@ $$
 $$
 \operatorname{Var}(P_{\max})
 =\frac{4}{16}\left(1-2^{-2n}\right)+\frac{12}{16}\left(0-2^{-2n}\right)
-=\frac14-2^{-2n},
+=\frac14-2^{-2n}
 $$
 
-### 凸多胞形
+### 和约束下可选子集最大规模的期望
 
 #### 曹冲（新一将成名2013）
 
@@ -820,6 +818,8 @@ $$
 **称象**：当你受到伤害后，你可以亮出牌堆顶的四张牌，然后你获得其中的任意张点数之和不大于13的牌。
 
 下面我们来研究**称象**获得的牌数。
+
+【Ehrhart】
 
 用$$ \mathbf{x} = \begin{pmatrix}
 x1 & x2 & x3 & x4
@@ -997,7 +997,267 @@ polytope > print $p4->N_LATTICE_POINTS;
 
 数学期望和方差分别为：
 
-$$ \operatorname{E}(K) = \frac{62272}{28561} \approxeq 2.1803, \quad \operatorname{Var}(K) = \frac{399322010}{815730721} \approxeq 0.4895 $$
+$$ \mathbb E[K] = \frac{62272}{28561} \approxeq 2.1803, \quad \operatorname{Var}(K) = \frac{399322010}{815730721} \approxeq 0.4895 $$
+
+【生成函数 + 升标号】
+
+另一种解法从**组合生成函数**出发，将“无序多重集合计数”与“有序四元组计数”通过一个明确的升标号算子连接起来。该方法完全白盒，且所有计算均归结为**有限次系数抽取与有限求和**。
+
+设四张牌点数为
+
+$$
+x_1,x_2,x_3,x_4\in\{1,2,\dots,13\}
+$$
+
+并记其排序后的次序统计量为
+
+$$
+A_1\le A_2\le A_3\le A_4
+$$
+
+定义在总和不超过 $13$ 的约束下**最多可取的张数**
+
+$$
+K:=\max\{k\in\{1,2,3,4\}:A_1+\cdots+A_k\le 13\}
+$$
+
+显然
+
+$$
+\mathbb P(K\ge k)=\mathbb P(A_1+\cdots+A_k\le 13)
+$$
+
+并且
+
+$$
+\mathbb P(K=k)=\mathbb P(K\ge k)-\mathbb P(K\ge k+1)
+$$
+
+因此，只需分别计数事件 $K\ge 2$、$K\ge 3$、$K\ge 4$ 对应的**有序四元组**数量。
+
+引入形式变量 $y_1,\dots,y_{13}$。
+对任意大小为 $4$ 的多重集合
+
+$$
+M=\{1^{m_1}2^{m_2}\cdots 13^{m_{13}}\},\qquad \sum_{j=1}^{13}m_j=4
+$$
+
+定义其对应单项式
+
+$$
+y^M:=\prod_{j=1}^{13}y_j^{m_j}.
+$$
+
+此处引入 $y_j$：记录点数为 $j$ 的牌出现次数（用于后续从多重集合升标号到有序四元组）。
+
+对于任一仅依赖多重集合（即对置换对称）的性质 $\mathcal P$，定义**无序多重集合枚举多项式**
+
+$$
+U_{\mathcal P}(y_1,\dots,y_{13})
+:=\sum_{\substack{M:\ \sum m_j=4\\ \mathcal P(M)\ \text{成立}}} y^M
+$$
+
+定义升标号线性算子
+
+$$
+\mathrm{Lab}_4:\ \mathbb{Q}[y_1,\dots,y_{13}]_{\text{齐次次数 }4}
+\longrightarrow
+\mathbb{Q}[y_1,\dots,y_{13}]_{\text{齐次次数 }4}
+$$
+
+在基单项式上的作用为
+
+$$
+\mathrm{Lab}_4\!\left(\prod_{j=1}^{13}y_j^{m_j}\right)
+:=\frac{4!}{\prod_{j=1}^{13}m_j!}\prod_{j=1}^{13}y_j^{m_j},
+\qquad \sum m_j=4
+$$
+
+并线性延拓。
+
+**解释**：$\dfrac{4!}{\prod m_j!}$ 正是将该多重集合分配到 $4$ 个有序位置的排列数。
+
+因此，有序四元组的计数可由下式给出：
+
+$$
+\#\{(x_1,x_2,x_3,x_4):\mathcal P\}
+=
+\Big(\mathrm{Lab}_4(U_{\mathcal P})\Big)\Big|_{y_1=\cdots=y_{13}=1}
+$$
+
+现在构造 $K\ge 3$ 的多重集合枚举多项式
+
+事件
+
+$$
+K\ge 3 \iff A_1+A_2+A_3\le 13
+$$
+
+仅依赖多重集合结构。
+
+为了计数满足 $A_1+A_2+A_3\le 13$ 的情形，一个自然的思路是按第三小值 $A_3$ 分层。令
+
+$$
+A_3=c,\qquad c\in\{1,2,\dots,13\}
+$$
+
+那么前三张（即 $A_1,A_2,A_3$）满足
+
+$$
+1\le A_1\le A_2\le A_3=c
+$$
+
+因此 $A_1,A_2$ 只能从集合 $\{1,2,\dots,c-1\}$ 中取值（允许重复），而 $c$ 至少出现一次。
+
+为了用生成函数“同时记录张数与点数和”，我们引入两个标记变量：
+
+- $u$：记录取了多少张（即计数元素个数）
+- $z$：记录点数和
+
+对每个点数 $j\le c-1$，它在多重集合里可以出现 $0,1,2,\dots$ 次。若点数 $j$ 出现了 $t$ 次，则贡献为
+
+$$
+(u\,y_j\,z^j)^t
+$$
+
+因此点数 $j$ 的贡献生成函数为几何级数
+
+$$
+1+(u\,y_j\,z^j)+(u\,y_j\,z^j)^2+\cdots=\frac{1}{1-u\,y_j\,z^j}
+$$
+
+把所有 $j=1,2,\dots,c-1$ 的可能性独立相乘，就得到
+
+$$
+B_{c-1}(u,z):=\prod_{j=1}^{c-1}\frac{1}{1-u\,y_j\,z^j}
+$$
+
+这正是在“第三小为 $c$”的情形下，前三张中**小于 $c$ 的部分**（即 $A_1,A_2$ 以及可能出现的更多小牌）所对应的多重集合生成函数。
+
+并定义截断算子
+
+$$
+[z^{\le 13}]\Phi(z):=\sum_{s=0}^{13}[z^s]\Phi(z)
+$$
+
+设
+$$
+\Theta_3(c)
+:=
+[z^{\le 13}]\,[u^3]\;
+\left(\frac{u\,y_c\,z^c}{1-u\,y_c\,z^c}\right)
+B_{c-1}(u,z)
+$$
+
+即为按 $A_3=c$ 分层的计数表达式。此表达式正是在辅助生成函数的基础上，再额外乘上一个“至少一个 $c$”的因子
+
+$$
+\frac{u\,y_c\,z^c}{1-u\,y_c\,z^c},
+$$
+
+并通过取 $[u^3]$ 强制“前三张恰好三张”，再通过截断 $[z^{\le 13}]$ 强制“前三张和不超过 13”即可得。它枚举“第三小值恰为 $c$ 且前三小之和不超过 $13$”的多重集合（仅含前三个元素）。
+
+第四张牌必须满足 $A_4\ge c$，因此得到
+
+$$
+U_{\ge 3}(y)
+=
+\sum_{c=1}^{13}\left(\sum_{d=c}^{13}y_d\right)\Theta_3(c)
+$$
+
+对应的**有序四元组计数**为
+
+$$
+\#(K\ge 3)
+=
+\Big(\mathrm{Lab}_4(U_{\ge 3})\Big)\Big|_{y_1=\cdots=y_{13}=1}
+$$
+
+类似地，对$K\ge 2$可构造
+
+$$
+\Theta_2(c)
+:=
+[z^{\le 13}]\,[u^2]\;
+\left(\frac{u\,y_c\,z^c}{1-u\,y_c\,z^c}\right)
+B_{c-1}(u,z)
+$$
+
+并得到
+
+$$
+U_{\ge 2}(y)
+=
+\sum_{c=1}^{13}\left(\sum_{d=c}^{13}y_d\right)^2\Theta_2(c)
+$$
+
+从而
+
+$$
+\#(K\ge 2)
+=
+\Big(\mathrm{Lab}_4(U_{\ge 2})\Big)\Big|_{y_1=\cdots=y_{13}=1}
+$$
+
+此外
+
+$$
+\#(K\ge 4)=\binom{13}{4}
+$$
+
+由差分关系
+
+$$
+\#(K=3)=\#(K\ge 3)-\#(K\ge 4)
+$$
+
+$$
+\#(K=2)=\#(K\ge 2)-\#(K\ge 3)
+$$
+
+$$
+\#(K=1)=13^4-\#(K\ge 2)
+$$
+
+即可得到 $K$ 的完整分布。
+
+由于 $c$ 仅在 $1\le c\le 13$ 上求和，且所有生成函数只需截断到 $z^{13}$，上述所有系数抽取均为**有限代数运算**。计算这些有限系数可得
+
+$$
+\#(K=1)=4165,\quad
+\#(K=2)=15796,\quad
+\#(K=3)=7885,\quad
+\#(K=4)=715
+$$
+
+从而
+
+$$
+\mathbb E[K]=\frac{62272}{28561},\qquad
+\mathrm{Var}(K)=\frac{399322010}{815730721}.
+$$
+
+【备注】与常数项（CT）表示的等价性
+
+上述升标号算子 $\mathrm{Lab}_4$ 可等价地用常数项算子表示。对任意齐次 $4$ 次多项式 $U(y)$，有
+
+$$
+\left.\mathrm{Lab}_4(U)\right|_{y_1=\cdots=y_{13}=1}
+=
+\mathrm{CT}_{y}\!\left[
+U(y)\left(\sum_{j=1}^{13}y_j^{-1}\right)^4
+\right]
+$$
+
+其中 $$\mathrm{CT}_{y}$$ 表示取 $$y_1^0\cdots y_{13}^0$$ 的系数。
+
+该恒等式表明：常数项运算自动为每个多重集合插入正确的排列权重
+
+$$
+\frac{4!}{\prod m_j!}
+$$
+
+从而在形式上等价于升标号算子。本文主文采用 $\mathrm{Lab}_4$ 以增强直观性；CT 表示可视为其代数化实现。
 
 ### 随机子集和的可达性概率
 
@@ -1120,7 +1380,7 @@ def subset_sum_probability(n, target=13, max_value=13):
 
 ---
 
-【封闭形势】
+【封闭形式】
 
 下面来说明该概率必然存在封闭形式（[Closed-form Expression](https://en.wikipedia.org/wiki/Closed-form_expression)）.
 
